@@ -1,3 +1,8 @@
+2000-11-07  Nick Clifton  <nickc@redhat.com>
+
+	* stabs.c (generate_asm_file): Increase length of xmalloc'ed
+	buffer in order to avoid buffer overflows.
+
 2000-11-02  Theo Honohan  <th@futuretv.com>
 
 	* config/tc-arm.c (do_msr): Improve error message. 
